--- a/static/style.css
+++ b/static/style.css
@@ -123,30 +123,31 @@ input, textarea, select {
 
 }
 
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 6rem;
+}
+
 .button {
-    background: none;
-    border: 0.2rem solid var(--primary-color);
-  
-    margin-bottom: 6rem;
-    padding: 1.4rem 3rem;
-  
-    width: fit-content;
-  
-    color: var(--primary-color);
-    font-size: 1.4rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
-  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1.6rem;
-  
-    position: relative;
-  
-    transition: 400ms;
-  }
+  background: none;
+  border: 0.2rem solid var(--primary-color);
+  padding: 1.4rem 3rem;
+  width: fit-content;
+  color: var(--primary-color);
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+  position: relative;
+  transition: 400ms;
+}
+
   
   body.light-mode .button,
   body.light-mode #home h4 {
