--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <h1>Formulário de Informações pewqeq</h1>
-  <a class="button" onclick="iniciarRobo()">Iniciar ROBÔ</a>
+  <div class="button-container">
+    <a class="button" onclick="iniciarRobo()">Iniciar ROBÔ</a>
+  </div>
   
 
   <form method="POST">
@@ -40,7 +42,7 @@
     <select id="genero" name="genero">
       <option value="masculino">Masculino</option>
       <option value="feminino">Feminino</option>
-      <option value="outro">Outrossssssss</option>
+      <option value="outro">Outros</option>
     </select>
     <br>
 
