--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-  <h1>Formulário de Informações pewqeq</h1>
+  <h1>Formulário de Informações</h1>
   <div class="button-container">
     <a class="button" onclick="iniciarRobo()">Iniciar ROBÔ</a>
   </div>
@@ -104,11 +104,18 @@
     <label for="ano_conclusao">Ano de conclusão:</label>
     <input type="number" id="ano_conclusao" required>
     
-     <script>
-    function iniciarRobo() {
-      fetch('/iniciar-robo', { method: 'POST' });  // Chama a rota '/iniciar-robo' via POST
-    }
+    <script>
+      async function iniciarRobo() {
+        try {
+          const response = await fetch('/iniciar-robo', { method: 'POST' });
+          const result = await response.text();
+          console.log(result); // Exibe o resultado no console do navegador
+        } catch (error) {
+          console.error('Erro ao iniciar o robô:', error);
+        }
+      }
     </script>
+    
    
 </body>
 </html>
